k8s/openshift/route-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-repo-creator-route
  labels:
    app.kubernetes.io/name: gitlab-repo-creator
    app.kubernetes.io/component: oauth-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitlab-repo-creator
  ports:
    - name: oauth-proxy
      port: 80
      targetPort: oauth-proxy
      protocol: TCP
