k8s/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitlab-repo-creator
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains
    haproxy.router.openshift.io/timeout: 300s
spec:
  host: platform.apps.example.com
  path: /git-repo
  to:
    kind: Service
    name: gitlab-repo-creator-route
    weight: 100
  port:
    targetPort: oauth-proxy
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
